--- a/index.html
+++ b/index.html
@@ -299,70 +299,138 @@
             <div class="gallery">
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-1.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-1.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-2.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-2.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-3.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-3.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-4.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-4.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-5.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-5.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-6.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-6.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-7.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-7.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-8.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-8.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-9.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-9.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-10.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-10.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-11.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-11.jpg" alt="lel">
                 </figure>
 
 
                 <figure class="gallery-item">
-                    <img src="img/gallery/gallery-12.jpg" alt="lel" >
+                    <img src="img/gallery/gallery-12.jpg" alt="lel">
                 </figure>
 
 
 
 
             </div>
+        </section>
+        <section class="section-pricing">
 
+            <div class="container">
+                <span class="subheading"> Meals </span>
+                <h2 class="heading-secondary">
+                    Eating well without breaking the bank
+                </h2>
+            </div>
+            <div class="container grid grid--2-cols">
+                <div class="pricing-plan">
+                    <header class="plan-header">
+                        <p class="plan-name">Starter</p>
+                        <p class="plan-price"><span>$</span>399</p>
+                        <p class="plan-text">Per Month. That's just $13 per meal!</p>
+                    </header>
+                    <ul class="list">
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>1 Meal per day</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Order times are between 11am and 9pm</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Delivery is free </span>
+                        </li>
+                    </ul>
 
+                    <div class="plan-sign-up">
+                        <a href="#" class="btn btn--full">
+                            Start Eating Well
+                        </a>
+                    </div>
+               
+                </div>
+
+                <div class="pricing-plan">
+                    <header class="plan-header">
+                        <p class="plan-name">Complete</p>
+                        <p class="plan-price"><span>$</span>649</p>
+                        <p class="plan-text">Per Month. That's just $10 per meal!</p>
+                    </header>
+                    <ul class="list">
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>2 Meal per day</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Order 24/7</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Delivery is free </span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Get access to latest recipes </span>
+                        </li>
+                    </ul>
+                    <div class="plan-sign-up">
+                        <a href="#" class="btn btn--full">
+                            Start Eating Well
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
