--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Omnifood is an AI-powered 
+    food subscription that will make you eat healthy again, 365 days per year. It's tailored 
+    to you personal tastes and nutritional needs. "
+    />
+    <link rel="icon" href="img/favicon.png"/>
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
+    <link rel="manifest" href="manifest.webmanifest"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>DudeIamTired</title>
+    <title>Omnifood &mdash; Never Cook AIFood</title>
 </head>
 
 <body>
@@ -19,11 +26,11 @@
         </a>
         <nav class="main-nav">
             <ul class="main-nav-list">
-                <li><a class="main-nav-link" href="#">How It Works</a></li>
-                <li><a class="main-nav-link" href="#">Meals</a></li>
-                <li><a class="main-nav-link" href="#">Testimonials</a></li>
-                <li><a class="main-nav-link" href="#">Pricing</a></li>
-                <li><a class="main-nav-link nav-cta" href="#"> Try for free</a></li>
+                <li><a class="main-nav-link" href="#how">How It Works</a></li>
+                <li><a class="main-nav-link" href="#meals">Meals</a></li>
+                <li><a class="main-nav-link" href="#testimonials">Testimonials</a></li>
+                <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+                <li><a class="main-nav-link nav-cta" href="#cta"> Try for free</a></li>
             </ul>
         </nav>
         <button class="btn-mobile-nav">
@@ -40,8 +47,8 @@
                         The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to
                         your
                         personal tastes and nutritional needs. </p>
-                    <a href="#" class="btn btn--full margin-right-sm">Start Eating Well</a>
-                    <a href="#" class="btn btn--outline margin-right-sm">Learn more &rarr;</a>
+                    <a href="#cta" class="btn btn--full margin-right-sm">Start Eating Well</a>
+                    <a href="#how" class="btn btn--outline margin-right-sm">Learn more &rarr;</a>
 
                     <div class="delivered-meals">
                         <div class="delivered-imgs">
@@ -58,8 +65,17 @@
                     </div>
                 </div>
                 <div class="hero-img-box">
-                    <img src="img/hero.png" class="hero-img"
+                    <picture>
+                        <source srcset="img/hero.webp"
+                        type="image/webp"/>
+
+                        <source srcset="img/hero-min.png"
+                        type="image/png"/>
+                        
+                    <img src="img/hero-min.png" class="hero-img"
                         alt="woman enjoying food, meals in storage, and food bowls on a table">
+
+                    </picture>
                 </div>
             </div>
         </section>
@@ -80,7 +96,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-how">
+        <section class="section-how" id="how">
             <div class="container">
                 <span class="subheading">How it works</span>
                 <h2 class="heading-secondary">
@@ -142,7 +158,7 @@
             </div>
         </section>
 
-        <section class="section-meals">
+        <section class="section-meals" id="meals">
             <div class="container center-text">
                 <span class="subheading"> Meals </span>
                 <h2 class="heading-secondary">
@@ -248,7 +264,7 @@
             </div>
         </section>
 
-        <section class="section-testimonials grid grid--2-cols">
+        <section class="section-testimonials grid grid--2-cols" id="testimonials">
             <div class="testimonials-container">
 
                 <span class="subheading"> Meals </span>
@@ -368,7 +384,7 @@
 
             </div>
         </section>
-        <section class="section-pricing">
+        <section class="section-pricing" id="pricing">
 
             <div class="container">
                 <span class="subheading"> Meals </span>
@@ -482,7 +498,7 @@
         </section>
 
         <!--Section Call To Action-->
-        <section class="section-cta">
+        <section class="section-cta" id="cta">
             <div class="container">
                 <div class="cta">
                     <!-- Form Section -->
@@ -493,20 +509,28 @@
                             Start eating well today. You can cancel or pause anytime.
                             And the first meal is on us!
                         </p>
-                        <form class="cta-form" action="#">
+                        <form class="cta-form" name="sign-up" netlify>
                             <div>
                                 <label for="full-name">Full Name</label>
-                                <input id="full-name" type="text" placeholder="Primata Pemberani" required>
+                                <input id="full-name"
+                                 type="text"
+                                 placeholder="Primata Pemberani"
+                                 name="full-name"
+                                 required>
                             </div>
+
                             <div>
                                 <label for="email">Email</label>
-                                <input id="email" type="email" placeholder="me@example.com" required>
-
+                                <input id="email"
+                                  type="email"
+                                  placeholder="me@example.com"
+                                  name="email"
+                                  required>
                             </div>
                             <div>
 
                                 <label for="select-where"> Where Did you hear from Us ? </label>
-                                <select id="select-where" required>
+                                <select id="select-where" name="select-where" required>
                                     <option value="">Please choose one Option:</option>
                                     <option value="friends">Friends and Family</option>
                                     <option value="youtube">Youtube Videos</option>
@@ -546,7 +570,7 @@
                     </li>
                 </ul>
 
-                <p class="copyright">Copyright &copy; 2022 by Omnifood, Inc. All right Reserved.</p>
+                <p class="copyright">Copyright &copy; <span class="year">2027 </span> by Omnifood, Inc. All right Reserved.</p>
 
             </div>
             <div class="address-col">
@@ -617,9 +641,10 @@
         </div>
 
     </footer>
-
+!python /content/yolov5/export.py --weights /content/yolov5/runs/train/exp/weights/best.pt --include tflite
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script defer src="js/script.js"></script>
 </body>
 
 </html>
